try to fix squished companion on mobile

--- a/src/advertising/modules/player-companion-300x250/style.scss
+++ b/src/advertising/modules/player-companion-300x250/style.scss
@@ -1,9 +1,11 @@
 #td_companion_300x250 {
+	display: flex;
+	justify-content: center;
 	position: fixed;
 	box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
 	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
+	left: 0;
+	width: 100%;
 	z-index: 2147483647;
 
 	&:has(*)::before {
